# LAL

./: README.md  SKILL.md  SPEC.md  install.sh
backend/: .env  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260326040203_init/: migration.sql
backend/src/: index.ts
backend/src/routes/: articles.ts  chat.ts  exercises.ts  index.ts  settings.ts  tts.ts  words.ts
backend/src/services/: ai.ts
backend/src/utils/: srtParser.ts
cli/: install.sh  pyproject.toml  schema.sql
cli/lal_cli/: __init__.py  articles.py  database.py  main.py  models.py  settings.py  user.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LLMChat.tsx  Sidebar.tsx  TTSPlayer.tsx  ThemeProvider.tsx  WordCard.tsx
frontend/src/components/ChatBox/: ChatBox.tsx  ChatContextPicker.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ChatToast.tsx  index.ts
frontend/src/pages/: ArticleDetailPage.tsx  ArticlesPage.tsx  ExercisesPage.tsx  SettingsPage.tsx  TTSPage.tsx  WordListPage.tsx
frontend/src/services/: api.ts  chatApi.ts  tts.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: chat.ts
frontend/src/utils/: tokenize.ts
