[project]
name = "lal-cli"
version = "0.2.0"
description = "CLI tool for Learn Any Language (LAL)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
]

[project.scripts]
lal-cli = "lal_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
